# mc-devel

./: 0001-Ticket-26-mcedit-reset-modified-status-after-undo.patch  acinclude.m4  autogen.sh  configure.ac
doc/: Makefile.am
doc/man/: Makefile.am  date-of-man-include.am
lib/: Makefile.am  event-types.c  event-types.h  fileloc.h  global.c  global.h  keybind.c  keybind.h  scripting.c  scripting.h  util.c  util.h  utilunix.c  widget.h
lib/lua/: capi-safecall.c  capi-safecall.h  capi.c  capi.h  plumbing.c  plumbing.h  timer.c  timer.h  utilx.c  utilx.h
lib/mcconfig/: common.c  paths.c
lib/skin/: Makefile.am  hc-skins.c  internal.h  lines.c  scrollbar.c
lib/tty/: color-internal.h  color.c  key.c  tty-ncurses.c  tty-slang.c  tty-slang.h  tty.c  tty.h
lib/vfs/: Makefile.am  direntry.c  gc.c  path.h  vfs.h  xdirentry.h
lib/widget/: Makefile.am  background.c  button.c  buttonbar.c  check.c  dialog-switch.c  dialog-switch.h  dialog.c  dialog.h  frame.c  frame.h  gauge.c  grepping-listbox.c  grepping-listbox.h  group.c  group.h  groupbox.c  history.c  hline.c  input.c  input_complete.c  label.c  listbox.c  listbox.h  menu.c  program.c  program.h  quick.c  radio.c  screen.c  screen.h  scrollbar.c  scrollbar.h  widget-common.c  widget-common.h  window.c  window.h  wtools.c
m4.include/: mc-i18n.m4  mc-lua.m4  mc-vfs.m4
misc/: Makefile.am  mc.default.keymap  mc.emacs.keymap  mc.keymap.default  mc.keymap.emacs
misc/skins/: dark.ini  darkfar.ini  gray-green-purple256.ini  gray-orange-blue256.ini  julia256.ini  modarcon16-defbg.ini  modarcon16.ini  modarcon16root-defbg.ini  modarcon16root.ini  modarin256-defbg.ini  modarin256.ini  modarin256root-defbg.ini  modarin256root.ini  sand256.ini  seasons-autumn16M.ini  seasons-spring16M.ini  seasons-summer16M.ini  seasons-winter16M.ini  xoria256.ini  yadt256-defbg.ini  yadt256.ini
misc/syntax/: Makefile.am  Syntax.in  Syntax.ini.in
src/: Makefile.am  args.c  args.h  background.c  events_init.c  execute.c  help.c  history.h  keybind-defaults.c  keybind-defaults.h  keymap.c  keymap.h  learn.c  main.c  main.h  setup.c  setup.h  textconf.c  usermenu.c
src/diffviewer/: ydiff.c
src/editor/: Makefile.am  bookmark.c  edit-impl.h  edit.c  editcmd.c  editcmd_dialogs.c  editdraw.c  editwidget.c  editwidget.h  spell_dialogs.c  syntax.c  undoredo.c  undoredo.h
src/filemanager/: Makefile.am  achown.c  boxes.c  boxes.h  chattr.c  chmod.c  chown.c  cmd.c  cmd.h  command.c  ext.c  file.c  filegui.c  filemanager.c  fileopctx.h  find.c  hotlist.c  info.c  layout.c  layout.h  listmode.c  midnight.c  midnight.h  panel.c  panel.h  panelize.c  panelize.h  tree.c  usermenu.c  usermenu.h
src/lua/: extra-files-to-dist.mk  modules.c  modules.h  pre-init.h
src/lua/doc/: HACKING.md
src/lua/doc/guide/: 80-installation.md
src/lua/doc/ldoc/html/: mc.css
src/lua/misc/skin-sampler/: generate.sh
src/lua/modules/: conf.c  fields.c  fields.h  fs-dir.c  fs-filedes.c  fs-statbuf.c  fs-vpath.c  fs.c  fs.h  internal.c  locale.c  mc.c  os.c  prompts.c  regex.c  timer.c  tty.c  tty.h  ui-canvas.c  ui-canvas.h  ui-custom.c  ui-custom.h  ui-editbox.c  ui-panel.c  ui-viewer.c  ui.c  utils-bit32.c  utils-text-transport.c  utils-text.c
src/lua/tests/nonauto/: ui_gc.lua
src/lua/tests/snippets/: upload_documentation
src/vfs/: Makefile.am  plugins_init.c
src/vfs/extfs/: extfs.c
src/vfs/fish/: fish.c  fishdef.h
src/vfs/fish/helpers/: get
src/vfs/ftpfs/: ftpfs.c
src/vfs/luafs/: internal.h  luafs-gc.c  luafs.c  luafs.h
src/vfs/tar/: Makefile.am  tar-internal.h  tar.c  xheader.c
src/viewer/: actions_cmd.c  mcviewer.c
tests/lib/: utilunix__mc_pstream_get_string.c
tests/src/editor/: edit_complete_word_cmd.c
